@@ -15,31 +15,6 @@
 #include "warn.hh"
 #include "pango-font.hh"
 
-LY_DEFINE (ly_paper_get_font, "ly:paper-get-font", 2, 0, 0,
-	   (SCM paper_smob, SCM chain),
-
-	   "Return a font metric satisfying the font-qualifiers "
-	   "in the alist chain @var{chain}.\n"
-	   "(An alist chain is a list of alists, "
-	   "containing grob properties).\n")
-{
-  Output_def *paper = unsmob_output_def (paper_smob);
-  SCM_ASSERT_TYPE (paper, paper_smob, SCM_ARG1,
-		   __FUNCTION__, "paper definition");
-  
-  Font_metric *fm = select_font (paper, chain);
-  return fm->self_scm ();
-}
-
-LY_DEFINE (ly_paper_get_number, "ly:paper-get-number", 2, 0, 0,
-	   (SCM layout_smob, SCM name),
-	   "Return the layout variable @var{name}.")
-{
-  Output_def *layout = unsmob_output_def (layout_smob);
-  SCM_ASSERT_TYPE (layout, layout_smob, SCM_ARG1,
-		   __FUNCTION__, "layout definition");
-  return scm_make_real (layout->get_dimension (name));
-}
 
 bool
 wild_compare (SCM field_val, SCM val)
